# basin-py

./: .gitignore  LICENSE  README.md  ROADMAP.md  TASKS.md  decisions.md  pyproject.toml
src/basin/: __init__.py  _http.py  _retry.py  client.py  errors.py  sync_client.py
src/basin/admin/: __init__.py  client.py  types.py
src/basin/auth/: __init__.py  client.py  types.py
src/basin/codegen/: __init__.py  __main__.py  emit.py
src/basin/functions/: __init__.py  client.py
src/basin/openapi/: __init__.py  fetch.py  types.py
src/basin/postgrest/: __init__.py  builder.py  types.py
src/basin/realtime/: __init__.py  channel.py  presence.py  sse.py  ws.py
src/basin/storage/: __init__.py  client.py  types.py
tests/: test_admin.py  test_auth.py  test_builder.py  test_client.py  test_codegen.py  test_errors.py  test_functions.py  test_openapi.py  test_realtime.py  test_retry.py  test_storage.py  test_sync.py
