[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basin-sdk"
version = "0.1.0"
description = "Python SDK for basin — async-first, httpx-backed, mirrors basin-js"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["basin", "database", "sdk", "postgrest", "auth"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
realtime = ["websockets>=12.0"]
iceberg = ["pyiceberg>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
basin-gen-types = "basin.codegen.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/basin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src"]
